Closed Bug 1292395 Opened 8 years ago Closed 8 years ago

FrameLayerBuilder.cpp syntax highlighting in Sublime Text 3 is broken

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla51
Tracking Status
firefox51 --- fixed

People

(Reporter: mstange, Assigned: mstange)

Details

Attachments

(1 file)

This is really a bug in the Sublime Text C++ syntax highlighter, but it's easy to work around.
Comment on attachment 8778028 [details]
Bug 1292395 - Tweak this assertion message.

https://reviewboard.mozilla.org/r/69406/#review66568
Attachment #8778028 - Flags: review?(matt.woodrow) → review+
Pushed by mstange@themasta.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/fcf246691521
Tweak this assertion message. r=mattwoodrow
https://hg.mozilla.org/mozilla-central/rev/fcf246691521
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: