Bug 1292395 - Tweak this assertion message. r=mattwoodrow

MozReview-Commit-ID: AARqrxI1Qwn